- Additional changes to improve usage of no-spikes case

version 1.1.13: (2017-11-28) 
- Fixed storage of `RefGene` in no-spikes when `StochasticRef = FALSE`

version 1.1.14: (2017-11-29)
- Minor bug resolved for no-spikes case when original data has spikes
- New unit test to assess that case

version 1.1.15: (2017-11-29)
- Typo fixed in `AtLeast2Cells` (`BASiCS_MCMC` function)ndefinition for 
no-spikes + regression case when original data has spikes

version 1.1.16: (2017-11-29)
- Change in `BASiCS_MCMC` no-spikes so that only genes with zero total
counts are excluded from the identifiability constrain

version 1.1.17: (2017-12-07)
- Stop scaling of size factors for no-spikes case (`HiddenBASiCS_MCMC_Start`)
- Unit testing updated accordingly 
- Extra unit test to ensure that no-spikes results match for objects 
with/without spikes when setting `WithSpikes = FALSE`
- Modified constrain for no-spikes cases (to deal with non-zero genes)
- Default value of `ConstrainType` set to 1 in `BASiCS_MCMC` (no-spikes only)

version 1.1.18: (2017-12-08)
- Minor typo in `HiddenBASiCS_MCMC_NoSpikesParam` resolved

version 1.1.19: (2017-12-09)
- extended vignette to describe regression and non-spike case
- changed markdown to rmarkdown engine to compile vignette to include
table of contents

version 1.1.20: (2017-12-11)
- Updated dpi option in vignette 

version 1.1.21: (2017-12-13)
- `ConstrainProp` added as an optional argument for `BASiCS_MCMC` (no-spikes)

version 1.1.22: (2017-12-15)
- Documentation on ChainSCReg and ChainRNAReg datasets added
- Fixed showFit method
- Updated dpi option in vignette to reduce .html size
- Default value for `ConstrainProp` set to 0.20 (no-spikes)
- Unit tests updated accordingly (no-spikes)

version 1.1.23: (2017-12-18)
- Minor improvements to documentation 

version 1.1.24: (2017-12-18) - WIP
- Reduced no of iterations in unit test for quicker testing
- library `hexbin` added to imports (required for `showFit`)
- Vignette edits