@@ -7,28 +7,33 @@
 \title{The BASiCS_Chain class}
 \description{
 Container of an MCMC sample of the BASiCS' model parameters 
-(see Vallejos et al, 2015) as generated by the 
-function \code{\link[BASiCS]{BASiCS_MCMC}}.
+as generated by the function \code{\link[BASiCS]{BASiCS_MCMC}}.
 }
 \section{Slots}{
 
 \describe{
-\item{\code{parameters}}{List of matrices containing MCMC chains for each model parameter. Depending on the mode in which 
-BASiCS was run, the following parameters can appear in the list:
+\item{\code{parameters}}{List of matrices containing MCMC chains for each model 
+parameter. Depending on the mode in which BASiCS was run, the following 
+parameters can appear in the list:
 \describe{
 \item{\code{mu}}{MCMC chain for gene-specific mean expression parameters 
 \eqn{\mu_i}, biological genes only 
 (matrix with \code{q.bio} columns, all elements must be positive numbers)}
-\item{\code{delta}}{MCMC chain for gene-specific biological cell-to-cell heterogeneity hyper-parameters \eqn{\delta[i]}, biological genes only 
+\item{delta}{MCMC chain for gene-specific biological over-dispersion 
+parameters \eqn{\delta_i}, biological genes only 
 (matrix with \code{q.bio} columns, all elements must be positive numbers)}
-\item{\code{phi}}{MCMC chain for cell-specific mRNA content normalising constants \eqn{\phi[j]}
-(matrix with \code{n} columns, all elements must be positive numbers and the sum of its elements must be equal to \code{n})}
-\item{\code{s}}{MCMC chain for cell-specific capture efficiency (or amplification biases if not using UMI based counts) normalising constants \eqn{s[j]}
+\item{phi}{MCMC chain for cell-specific mRNA content normalisation parameters 
+\eqn{\phi_j} (matrix with \code{n} columns, all elements must be positive 
+numbers and the sum of its elements must be equal to \code{n})}
+This parameter is only used when spike-in genes are available.
+\item{s}{MCMC chain for cell-specific technical normalisation parameters 
+\eqn{s_j} (matrix with \code{n} columns, 
+all elements must be positive numbers)}
+\item{nu}{MCMC chain for cell-specific random effects \eqn{\nu_j}
 (matrix with \code{n} columns, all elements must be positive numbers)}
-\item{\code{nu}}{MCMC chain for cell-specific random effects \eqn{\nu[j]}
-(matrix with \code{n} columns, all elements must be positive numbers)}
-\item{\code{theta}}{MCMC chain for technical variability hyper-parameter(s) \eqn{\theta} (matrix, all elements must be positive, each colum 
-represents 1 batch)}
+\item{theta}{MCMC chain for technical over-dispersion parameter(s) 
+\eqn{\theta} (matrix, all elements must be positive, 
+each colum represents 1 batch)}
 \item{\code{beta}}{MCMC chain for regression parameters
 (matrix with \code{k} columns where k represent the number of chosen basis functions) }
 \item{\code{sigma2}}{MCMC chain for the variance used during regression
