@@ -772,4 +772,5 @@ version 1.1.23: (2017-12-18)
 version 1.1.24: (2017-12-18) - WIP
 - Reduced no of iterations in unit test for quicker testing
 - library `hexbin` added to imports (required for `showFit`)
+- Default value set for `Tech` in `newBASiCS_Data` function
 - Vignette edits
